[package]
name = "authful-experminent-rust"
version = "0.1.0"
authors = ["James Holman <james.holman@domain.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
oauth2 = { version = "3.0.0-alpha.9", features = ["futures-03"]}
url = "2.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

